[gd_scene load_steps=10 format=2]

[ext_resource path="res://Robot/TankDriveRobot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Robot/Control_Panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sensors/WhiskerSensor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sensors/CameraSensor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sensors/LidarSensor.tscn" type="PackedScene" id=5]
[ext_resource path="res://Robot/Robot_with_sensors.gd" type="Script" id=6]
[ext_resource path="res://Sensors/TemperatureSensor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sensors/CompassSensor.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.468293, 0.393602, 0.662442 )

[node name="TankRobot_with_sensors" type="Spatial"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -149.892 ]
}

[node name="ControlPanel" parent="." instance=ExtResource( 2 )]

[node name="Robot" parent="." instance=ExtResource( 1 )]
input_ray_pickable = false
collision_layer = 5

[node name="ForwardCameraSensor" parent="Robot" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.984807, 0.173648, 0, -0.173648, 0.984807, 0, 0.727983, -0.65265 )

[node name="Lidar" parent="Robot" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19031, -0.948806 )

[node name="TempLeft" parent="Robot" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -0.5 )

[node name="TempRight" parent="Robot" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -0.5 )

[node name="WhiskerSensor" parent="Robot" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.117, -0.686 )

[node name="CompassSensor" parent="Robot" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44274, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="Robot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.883987, -0.43977 )
shape = SubResource( 1 )

[node name="LeftLight" type="SpotLight" parent="Robot"]
transform = Transform( 0.990268, -0.0894587, 0.106613, 0, 0.766044, 0.642788, -0.139173, -0.636532, 0.758589, -0.5, 0.5, -0.8 )
light_energy = 2.0
light_indirect_energy = 2.0
light_bake_mode = 0
spot_range = 4.0
spot_attenuation = 1.8025
spot_angle = 25.0

[node name="RightLight" type="SpotLight" parent="Robot"]
transform = Transform( 0.990268, 0.0894588, -0.106613, 0, 0.766044, 0.642788, 0.139173, -0.636532, 0.758589, 0.5, 0.5, -0.8 )
light_energy = 2.0
light_indirect_energy = 2.0
light_bake_mode = 0
spot_range = 4.0
spot_attenuation = 1.8025
spot_angle = 25.0

[node name="SuccessActionTimeout" type="Timer" parent="."]
one_shot = true
